2.10_the_project_step13/manifests/db_deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: project
spec:
  replicas: 1
  serviceName: postgres-db
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      name: postgres-db
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: postgres-db
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
