2.10_the_project_step13/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-step13
  namespace: project
  labels:
    name: project-step13
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: project-step13
  template:
    metadata:
      name: project-step13
      labels:
        name: project-step13
        version: v1
    spec:
      containers:
        - name: project-step13
          image: project-step13:v1
